[package]
name = "mlutil_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "mlutil_rust"
crate-type = ["cdylib"]

[dependencies]
regex = { version = "1.7.1", features = [] }
pyo3 = { version = "0.16.4", features = ["extension-module"] }
lazy_static = "1.3.0"

[package.metadata.maturin]
name = "mlutil_rust.code_tokenization"

